@@ -12,7 +12,10 @@
 ##
 
 AC_PREREQ([2.61])
-AC_INIT([sl-core], [2.1.0a], [sl-users@nic.surfnet.nl])
+AC_INIT([sl-core], 
+        m4_esyscmd([(pre=; if test -d ../.git -a ! -d .git; then cd ..; pre=slc/; fi; \
+                    ${pre}build-aux/version-gen ${pre}build-aux/tarball-version ${pre}build-aux/package-version)]), 
+        [sl-users@nic.surfnet.nl])
 AC_CONFIG_AUX_DIR([build-aux])
 
 AM_INIT_AUTOMAKE([1.11 tar-ustar no-define foreign dist-bzip2 silent-rules])
